--- a/public/forgot-password-test.html
+++ b/public/forgot-password-test.html
@@ -102,7 +102,7 @@
             submitBtn.textContent = 'Sending...';
             
             try {
-                const response = await fetch('http://localhost:5000/api/auth/forgotpassword', {
+                const response = await fetch('https://backend-1-tf17.onrender.com/api/auth/forgotpassword', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
