--- a/public/reset-password-test.html
+++ b/public/reset-password-test.html
@@ -118,7 +118,7 @@
             submitBtn.textContent = 'Resetting...';
             
             try {
-                const response = await fetch(`http://localhost:5000/api/auth/resetpassword/${token}`, {
+                const response = await fetch(`https://backend-1-tf17.onrender.com/api/auth/resetpassword/${token}`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json',
